{
  "version": 4,
  "terraform_version": "1.3.7",
  "serial": 89,
  "lineage": "9096e702-31cb-2f6b-9508-8f6708a7d67f",
  "resources": [
    {
      "module": "module.baseline.module.standalone[0].module.vpc[0]",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].app",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:893893329401:internet-gateway/igw-05cf81528e02c39bd",
            "id": "igw-05cf81528e02c39bd",
            "owner_id": "893893329401",
            "tags": {
              "Name": "igw-np-aft-app-091563-dev-0"
            },
            "tags_all": {
              "Name": "igw-np-aft-app-091563-dev-0",
              "appid": "aft-app-091563",
              "environment": "dev",
              "stla_lz": "true"
            },
            "vpc_id": "vpc-037e9bf11844ed848"
          },
          "dependencies": [
            "data.aws_caller_identity.current",
            "module.baseline.data.aws_ssm_parameters_by_path.app_vars",
            "module.baseline.data.aws_ssm_parameters_by_path.legacy_app_vars",
            "module.baseline.module.standalone.aws_vpc_endpoint_service_allowed_principal.firewall",
            "module.baseline.module.standalone.data.aws_caller_identity.app",
            "module.baseline.module.standalone.data.aws_vpc_endpoint_service.firewall",
            "module.baseline.module.standalone.module.vpc.aws_vpc.standalone"
          ]
        }
      ]
    },
    {
      "module": "module.baseline.module.standalone[0].module.vpc[0]",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "firewall",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].app",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:893893329401:route-table/rtb-0ac721acbc23e8c2b",
            "id": "rtb-0ac721acbc23e8c2b",
            "owner_id": "893893329401",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-05cf81528e02c39bd",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "rt-np-aft-app-091563-dev-0-firewall"
            },
            "tags_all": {
              "Name": "rt-np-aft-app-091563-dev-0-firewall",
              "appid": "aft-app-091563",
              "environment": "dev",
              "stla_lz": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-037e9bf11844ed848"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_caller_identity.current",
            "module.baseline.data.aws_ssm_parameters_by_path.app_vars",
            "module.baseline.data.aws_ssm_parameters_by_path.legacy_app_vars",
            "module.baseline.module.standalone.aws_vpc_endpoint_service_allowed_principal.firewall",
            "module.baseline.module.standalone.data.aws_caller_identity.app",
            "module.baseline.module.standalone.data.aws_vpc_endpoint_service.firewall",
            "module.baseline.module.standalone.module.vpc.aws_internet_gateway.igw",
            "module.baseline.module.standalone.module.vpc.aws_vpc.standalone"
          ]
        }
      ]
    },
    {
      "module": "module.baseline.module.standalone[0].module.vpc[0]",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].app",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:893893329401:route-table/rtb-0d5099de4af45ef32",
            "id": "rtb-0d5099de4af45ef32",
            "owner_id": "893893329401",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "192.168.0.0/24",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "vpce-0a1b5d662e7e97e14",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "192.168.1.0/24",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "vpce-02ad8eecd13470ffc",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "192.168.30.0/24",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "vpce-02ad8eecd13470ffc",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "192.168.31.0/24",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "vpce-0a1b5d662e7e97e14",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "rt-np-aft-app-091563-dev-0-igw"
            },
            "tags_all": {
              "Name": "rt-np-aft-app-091563-dev-0-igw",
              "appid": "aft-app-091563",
              "environment": "dev",
              "stla_lz": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-037e9bf11844ed848"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_caller_identity.current",
            "module.baseline.data.aws_availability_zones.all",
            "module.baseline.data.aws_ssm_parameters_by_path.app_vars",
            "module.baseline.data.aws_ssm_parameters_by_path.deploy_core_vars",
            "module.baseline.data.aws_ssm_parameters_by_path.deploy_vars",
            "module.baseline.data.aws_ssm_parameters_by_path.legacy_app_vars",
            "module.baseline.module.standalone.aws_vpc_endpoint_service_allowed_principal.firewall",
            "module.baseline.module.standalone.data.aws_caller_identity.app",
            "module.baseline.module.standalone.data.aws_vpc_endpoint_service.firewall",
            "module.baseline.module.standalone.module.vpc.aws_subnet.firewall",
            "module.baseline.module.standalone.module.vpc.aws_subnet.public",
            "module.baseline.module.standalone.module.vpc.aws_vpc.standalone",
            "module.baseline.module.standalone.module.vpc.aws_vpc_endpoint.fw_endpoint"
          ]
        }
      ]
    },
    {
      "module": "module.baseline.module.standalone[0].module.vpc[0]",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].app",
      "instances": [
        {
          "index_key": "0_eu-west-3a",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:893893329401:route-table/rtb-0df32ddf1d8fd470f",
            "id": "rtb-0df32ddf1d8fd470f",
            "owner_id": "893893329401",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "vpce-0a1b5d662e7e97e14",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "rt-np-aft-app-091563-dev-0-private-eu-west-3a"
            },
            "tags_all": {
              "Name": "rt-np-aft-app-091563-dev-0-private-eu-west-3a",
              "appid": "aft-app-091563",
              "environment": "dev",
              "stla_lz": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-037e9bf11844ed848"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_caller_identity.current",
            "module.baseline.data.aws_availability_zones.all",
            "module.baseline.data.aws_ssm_parameters_by_path.app_vars",
            "module.baseline.data.aws_ssm_parameters_by_path.deploy_core_vars",
            "module.baseline.data.aws_ssm_parameters_by_path.deploy_vars",
            "module.baseline.data.aws_ssm_parameters_by_path.legacy_app_vars",
            "module.baseline.module.standalone.aws_vpc_endpoint_service_allowed_principal.firewall",
            "module.baseline.module.standalone.data.aws_caller_identity.app",
            "module.baseline.module.standalone.data.aws_vpc_endpoint_service.firewall",
            "module.baseline.module.standalone.module.vpc.aws_subnet.firewall",
            "module.baseline.module.standalone.module.vpc.aws_subnet.private",
            "module.baseline.module.standalone.module.vpc.aws_vpc.standalone",
            "module.baseline.module.standalone.module.vpc.aws_vpc_endpoint.fw_endpoint"
          ]
        },
        {
          "index_key": "0_eu-west-3c",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:893893329401:route-table/rtb-0399a5252b4a806a8",
            "id": "rtb-0399a5252b4a806a8",
            "owner_id": "893893329401",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "vpce-02ad8eecd13470ffc",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "rt-np-aft-app-091563-dev-0-private-eu-west-3c"
            },
            "tags_all": {
              "Name": "rt-np-aft-app-091563-dev-0-private-eu-west-3c",
              "appid": "aft-app-091563",
              "environment": "dev",
              "stla_lz": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-037e9bf11844ed848"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_caller_identity.current",
            "module.baseline.data.aws_availability_zones.all",
            "module.baseline.data.aws_ssm_parameters_by_path.app_vars",
            "module.baseline.data.aws_ssm_parameters_by_path.deploy_core_vars",
            "module.baseline.data.aws_ssm_parameters_by_path.deploy_vars",
            "module.baseline.data.aws_ssm_parameters_by_path.legacy_app_vars",
            "module.baseline.module.standalone.aws_vpc_endpoint_service_allowed_principal.firewall",
            "module.baseline.module.standalone.data.aws_caller_identity.app",
            "module.baseline.module.standalone.data.aws_vpc_endpoint_service.firewall",
            "module.baseline.module.standalone.module.vpc.aws_subnet.firewall",
            "module.baseline.module.standalone.module.vpc.aws_subnet.private",
            "module.baseline.module.standalone.module.vpc.aws_vpc.standalone",
            "module.baseline.module.standalone.module.vpc.aws_vpc_endpoint.fw_endpoint"
          ]
        }
      ]
    },
    {
      "module": "module.baseline.module.standalone[0].module.vpc[0]",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].app",
      "instances": [
        {
          "index_key": "eu-west-3a",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:893893329401:route-table/rtb-0bc6a6597ec1b2fd0",
            "id": "rtb-0bc6a6597ec1b2fd0",
            "owner_id": "893893329401",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "vpce-0a1b5d662e7e97e14",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "rt-np-aft-app-091563-dev-0-public-eu-west-3a"
            },
            "tags_all": {
              "Name": "rt-np-aft-app-091563-dev-0-public-eu-west-3a",
              "appid": "aft-app-091563",
              "environment": "dev",
              "stla_lz": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-037e9bf11844ed848"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_caller_identity.current",
            "module.baseline.data.aws_availability_zones.all",
            "module.baseline.data.aws_ssm_parameters_by_path.app_vars",
            "module.baseline.data.aws_ssm_parameters_by_path.deploy_core_vars",
            "module.baseline.data.aws_ssm_parameters_by_path.deploy_vars",
            "module.baseline.data.aws_ssm_parameters_by_path.legacy_app_vars",
            "module.baseline.module.standalone.aws_vpc_endpoint_service_allowed_principal.firewall",
            "module.baseline.module.standalone.data.aws_caller_identity.app",
            "module.baseline.module.standalone.data.aws_vpc_endpoint_service.firewall",
            "module.baseline.module.standalone.module.vpc.aws_subnet.firewall",
            "module.baseline.module.standalone.module.vpc.aws_subnet.public",
            "module.baseline.module.standalone.module.vpc.aws_vpc.standalone",
            "module.baseline.module.standalone.module.vpc.aws_vpc_endpoint.fw_endpoint"
          ]
        },
        {
          "index_key": "eu-west-3c",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:893893329401:route-table/rtb-0a583c93eef1d3689",
            "id": "rtb-0a583c93eef1d3689",
            "owner_id": "893893329401",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "vpce-02ad8eecd13470ffc",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "rt-np-aft-app-091563-dev-0-public-eu-west-3c"
            },
            "tags_all": {
              "Name": "rt-np-aft-app-091563-dev-0-public-eu-west-3c",
              "appid": "aft-app-091563",
              "environment": "dev",
              "stla_lz": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-037e9bf11844ed848"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_caller_identity.current",
            "module.baseline.data.aws_availability_zones.all",
            "module.baseline.data.aws_ssm_parameters_by_path.app_vars",
            "module.baseline.data.aws_ssm_parameters_by_path.deploy_core_vars",
            "module.baseline.data.aws_ssm_parameters_by_path.deploy_vars",
            "module.baseline.data.aws_ssm_parameters_by_path.legacy_app_vars",
            "module.baseline.module.standalone.aws_vpc_endpoint_service_allowed_principal.firewall",
            "module.baseline.module.standalone.data.aws_caller_identity.app",
            "module.baseline.module.standalone.data.aws_vpc_endpoint_service.firewall",
            "module.baseline.module.standalone.module.vpc.aws_subnet.firewall",
            "module.baseline.module.standalone.module.vpc.aws_subnet.public",
            "module.baseline.module.standalone.module.vpc.aws_vpc.standalone",
            "module.baseline.module.standalone.module.vpc.aws_vpc_endpoint.fw_endpoint"
          ]
        }
      ]
    },
    {
      "module": "module.baseline.module.standalone[0].module.vpc[0]",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "firewall",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].app",
      "instances": [
        {
          "index_key": "eu-west-3a",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-032e4ce31636b784d",
            "route_table_id": "rtb-0ac721acbc23e8c2b",
            "subnet_id": "subnet-06bfaf55d4616a058"
          },
          "dependencies": [
            "data.aws_caller_identity.current",
            "module.baseline.data.aws_availability_zones.all",
            "module.baseline.data.aws_ssm_parameters_by_path.app_vars",
            "module.baseline.data.aws_ssm_parameters_by_path.deploy_core_vars",
            "module.baseline.data.aws_ssm_parameters_by_path.deploy_vars",
            "module.baseline.data.aws_ssm_parameters_by_path.legacy_app_vars",
            "module.baseline.module.standalone.aws_vpc_endpoint_service_allowed_principal.firewall",
            "module.baseline.module.standalone.data.aws_caller_identity.app",
            "module.baseline.module.standalone.data.aws_vpc_endpoint_service.firewall",
            "module.baseline.module.standalone.module.vpc.aws_internet_gateway.igw",
            "module.baseline.module.standalone.module.vpc.aws_route_table.firewall",
            "module.baseline.module.standalone.module.vpc.aws_subnet.firewall",
            "module.baseline.module.standalone.module.vpc.aws_vpc.standalone"
          ]
        },
        {
          "index_key": "eu-west-3c",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0238e11836840e7b6",
            "route_table_id": "rtb-0ac721acbc23e8c2b",
            "subnet_id": "subnet-0e70c634a00a5741f"
          },
          "dependencies": [
            "data.aws_caller_identity.current",
            "module.baseline.data.aws_availability_zones.all",
            "module.baseline.data.aws_ssm_parameters_by_path.app_vars",
            "module.baseline.data.aws_ssm_parameters_by_path.deploy_core_vars",
            "module.baseline.data.aws_ssm_parameters_by_path.deploy_vars",
            "module.baseline.data.aws_ssm_parameters_by_path.legacy_app_vars",
            "module.baseline.module.standalone.aws_vpc_endpoint_service_allowed_principal.firewall",
            "module.baseline.module.standalone.data.aws_caller_identity.app",
            "module.baseline.module.standalone.data.aws_vpc_endpoint_service.firewall",
            "module.baseline.module.standalone.module.vpc.aws_internet_gateway.igw",
            "module.baseline.module.standalone.module.vpc.aws_route_table.firewall",
            "module.baseline.module.standalone.module.vpc.aws_subnet.firewall",
            "module.baseline.module.standalone.module.vpc.aws_vpc.standalone"
          ]
        }
      ]
    },
    {
      "module": "module.baseline.module.standalone[0].module.vpc[0]",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].app",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "gateway_id": "igw-05cf81528e02c39bd",
            "id": "rtbassoc-0c78c9a9a7d9679f3",
            "route_table_id": "rtb-0d5099de4af45ef32"
          },
          "dependencies": [
            "data.aws_caller_identity.current",
            "module.baseline.data.aws_availability_zones.all",
            "module.baseline.data.aws_ssm_parameters_by_path.app_vars",
            "module.baseline.data.aws_ssm_parameters_by_path.deploy_core_vars",
            "module.baseline.data.aws_ssm_parameters_by_path.deploy_vars",
            "module.baseline.data.aws_ssm_parameters_by_path.legacy_app_vars",
            "module.baseline.module.standalone.aws_vpc_endpoint_service_allowed_principal.firewall",
            "module.baseline.module.standalone.data.aws_caller_identity.app",
            "module.baseline.module.standalone.data.aws_vpc_endpoint_service.firewall",
            "module.baseline.module.standalone.module.vpc.aws_internet_gateway.igw",
            "module.baseline.module.standalone.module.vpc.aws_route_table.igw",
            "module.baseline.module.standalone.module.vpc.aws_subnet.firewall",
            "module.baseline.module.standalone.module.vpc.aws_subnet.public",
            "module.baseline.module.standalone.module.vpc.aws_vpc.standalone",
            "module.baseline.module.standalone.module.vpc.aws_vpc_endpoint.fw_endpoint"
          ]
        }
      ]
    },
    {
      "module": "module.baseline.module.standalone[0].module.vpc[0]",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].app",
      "instances": [
        {
          "index_key": "0_eu-west-3a",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05ed7b379e78bed74",
            "route_table_id": "rtb-0df32ddf1d8fd470f",
            "subnet_id": "subnet-0512f385a390aef64"
          },
          "dependencies": [
            "data.aws_caller_identity.current",
            "module.baseline.data.aws_availability_zones.all",
            "module.baseline.data.aws_ssm_parameters_by_path.app_vars",
            "module.baseline.data.aws_ssm_parameters_by_path.deploy_core_vars",
            "module.baseline.data.aws_ssm_parameters_by_path.deploy_vars",
            "module.baseline.data.aws_ssm_parameters_by_path.legacy_app_vars",
            "module.baseline.module.standalone.aws_vpc_endpoint_service_allowed_principal.firewall",
            "module.baseline.module.standalone.data.aws_caller_identity.app",
            "module.baseline.module.standalone.data.aws_vpc_endpoint_service.firewall",
            "module.baseline.module.standalone.module.vpc.aws_route_table.private",
            "module.baseline.module.standalone.module.vpc.aws_subnet.firewall",
            "module.baseline.module.standalone.module.vpc.aws_subnet.private",
            "module.baseline.module.standalone.module.vpc.aws_vpc.standalone",
            "module.baseline.module.standalone.module.vpc.aws_vpc_endpoint.fw_endpoint"
          ]
        },
        {
          "index_key": "0_eu-west-3c",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a975abc92caed33f",
            "route_table_id": "rtb-0399a5252b4a806a8",
            "subnet_id": "subnet-0299e926878b4dd9e"
          },
          "dependencies": [
            "data.aws_caller_identity.current",
            "module.baseline.data.aws_availability_zones.all",
            "module.baseline.data.aws_ssm_parameters_by_path.app_vars",
            "module.baseline.data.aws_ssm_parameters_by_path.deploy_core_vars",
            "module.baseline.data.aws_ssm_parameters_by_path.deploy_vars",
            "module.baseline.data.aws_ssm_parameters_by_path.legacy_app_vars",
            "module.baseline.module.standalone.aws_vpc_endpoint_service_allowed_principal.firewall",
            "module.baseline.module.standalone.data.aws_caller_identity.app",
            "module.baseline.module.standalone.data.aws_vpc_endpoint_service.firewall",
            "module.baseline.module.standalone.module.vpc.aws_route_table.private",
            "module.baseline.module.standalone.module.vpc.aws_subnet.firewall",
            "module.baseline.module.standalone.module.vpc.aws_subnet.private",
            "module.baseline.module.standalone.module.vpc.aws_vpc.standalone",
            "module.baseline.module.standalone.module.vpc.aws_vpc_endpoint.fw_endpoint"
          ]
        },
        {
          "index_key": "1_eu-west-3a",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-009091be58b5e094c",
            "route_table_id": "rtb-0df32ddf1d8fd470f",
            "subnet_id": "subnet-0e355854d412c9173"
          },
          "dependencies": [
            "data.aws_caller_identity.current",
            "module.baseline.data.aws_availability_zones.all",
            "module.baseline.data.aws_ssm_parameters_by_path.app_vars",
            "module.baseline.data.aws_ssm_parameters_by_path.deploy_core_vars",
            "module.baseline.data.aws_ssm_parameters_by_path.deploy_vars",
            "module.baseline.data.aws_ssm_parameters_by_path.legacy_app_vars",
            "module.baseline.module.standalone.aws_vpc_endpoint_service_allowed_principal.firewall",
            "module.baseline.module.standalone.data.aws_caller_identity.app",
            "module.baseline.module.standalone.data.aws_vpc_endpoint_service.firewall",
            "module.baseline.module.standalone.module.vpc.aws_route_table.private",
            "module.baseline.module.standalone.module.vpc.aws_subnet.firewall",
            "module.baseline.module.standalone.module.vpc.aws_subnet.private",
            "module.baseline.module.standalone.module.vpc.aws_vpc.standalone",
            "module.baseline.module.standalone.module.vpc.aws_vpc_endpoint.fw_endpoint"
          ]
        },
        {
          "index_key": "1_eu-west-3c",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0986081c3b0889e5a",
            "route_table_id": "rtb-0399a5252b4a806a8",
            "subnet_id": "subnet-06789c64fa62697a3"
          },
          "dependencies": [
            "data.aws_caller_identity.current",
            "module.baseline.data.aws_availability_zones.all",
            "module.baseline.data.aws_ssm_parameters_by_path.app_vars",
            "module.baseline.data.aws_ssm_parameters_by_path.deploy_core_vars",
            "module.baseline.data.aws_ssm_parameters_by_path.deploy_vars",
            "module.baseline.data.aws_ssm_parameters_by_path.legacy_app_vars",
            "module.baseline.module.standalone.aws_vpc_endpoint_service_allowed_principal.firewall",
            "module.baseline.module.standalone.data.aws_caller_identity.app",
            "module.baseline.module.standalone.data.aws_vpc_endpoint_service.firewall",
            "module.baseline.module.standalone.module.vpc.aws_route_table.private",
            "module.baseline.module.standalone.module.vpc.aws_subnet.firewall",
            "module.baseline.module.standalone.module.vpc.aws_subnet.private",
            "module.baseline.module.standalone.module.vpc.aws_vpc.standalone",
            "module.baseline.module.standalone.module.vpc.aws_vpc_endpoint.fw_endpoint"
          ]
        }
      ]
    },
    {
      "module": "module.baseline.module.standalone[0].module.vpc[0]",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].app",
      "instances": [
        {
          "index_key": "eu-west-3a",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-029ff84db35f61690",
            "route_table_id": "rtb-0bc6a6597ec1b2fd0",
            "subnet_id": "subnet-0d8297ad90f36b73a"
          },
          "dependencies": [
            "data.aws_caller_identity.current",
            "module.baseline.data.aws_availability_zones.all",
            "module.baseline.data.aws_ssm_parameters_by_path.app_vars",
            "module.baseline.data.aws_ssm_parameters_by_path.deploy_core_vars",
            "module.baseline.data.aws_ssm_parameters_by_path.deploy_vars",
            "module.baseline.data.aws_ssm_parameters_by_path.legacy_app_vars",
            "module.baseline.module.standalone.aws_vpc_endpoint_service_allowed_principal.firewall",
            "module.baseline.module.standalone.data.aws_caller_identity.app",
            "module.baseline.module.standalone.data.aws_vpc_endpoint_service.firewall",
            "module.baseline.module.standalone.module.vpc.aws_route_table.public",
            "module.baseline.module.standalone.module.vpc.aws_subnet.firewall",
            "module.baseline.module.standalone.module.vpc.aws_subnet.public",
            "module.baseline.module.standalone.module.vpc.aws_vpc.standalone",
            "module.baseline.module.standalone.module.vpc.aws_vpc_endpoint.fw_endpoint"
          ]
        },
        {
          "index_key": "eu-west-3c",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dbfb56648aa098f4",
            "route_table_id": "rtb-0a583c93eef1d3689",
            "subnet_id": "subnet-041a0507eac15b96d"
          },
          "dependencies": [
            "data.aws_caller_identity.current",
            "module.baseline.data.aws_availability_zones.all",
            "module.baseline.data.aws_ssm_parameters_by_path.app_vars",
            "module.baseline.data.aws_ssm_parameters_by_path.deploy_core_vars",
            "module.baseline.data.aws_ssm_parameters_by_path.deploy_vars",
            "module.baseline.data.aws_ssm_parameters_by_path.legacy_app_vars",
            "module.baseline.module.standalone.aws_vpc_endpoint_service_allowed_principal.firewall",
            "module.baseline.module.standalone.data.aws_caller_identity.app",
            "module.baseline.module.standalone.data.aws_vpc_endpoint_service.firewall",
            "module.baseline.module.standalone.module.vpc.aws_route_table.public",
            "module.baseline.module.standalone.module.vpc.aws_subnet.firewall",
            "module.baseline.module.standalone.module.vpc.aws_subnet.public",
            "module.baseline.module.standalone.module.vpc.aws_vpc.standalone",
            "module.baseline.module.standalone.module.vpc.aws_vpc_endpoint.fw_endpoint"
          ]
        }
      ]
    },
    {
      "module": "module.baseline.module.standalone[0].module.vpc[0]",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_tls",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].app",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:893893329401:security-group/sg-00bf169017238b4a8",
            "description": "Reserved for internal LZ use in VPC vpc-np-aft-app-091563-dev-0",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00bf169017238b4a8",
            "ingress": [
              {
                "cidr_blocks": [
                  "192.168.0.0/19"
                ],
                "description": "TLS from VPC",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "aws-endpoint-traffic",
            "name_prefix": "",
            "owner_id": "893893329401",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sg-np-aft-app-091563-dev-0-aws-endpoint-traffic"
            },
            "tags_all": {
              "Name": "sg-np-aft-app-091563-dev-0-aws-endpoint-traffic",
              "appid": "aft-app-091563",
              "environment": "dev",
              "stla_lz": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-037e9bf11844ed848"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_caller_identity.current",
            "module.baseline.data.aws_ssm_parameters_by_path.app_vars",
            "module.baseline.data.aws_ssm_parameters_by_path.legacy_app_vars",
            "module.baseline.module.standalone.aws_vpc_endpoint_service_allowed_principal.firewall",
            "module.baseline.module.standalone.data.aws_caller_identity.app",
            "module.baseline.module.standalone.data.aws_vpc_endpoint_service.firewall",
            "module.baseline.module.standalone.module.vpc.aws_vpc.standalone"
          ]
        }
      ]
    },
    {
      "module": "module.baseline.module.standalone[0].module.vpc[0]",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "firewall",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].app",
      "instances": [
        {
          "index_key": "eu-west-3a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:893893329401:subnet/subnet-06bfaf55d4616a058",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3a",
            "availability_zone_id": "euw3-az1",
            "cidr_block": "192.168.31.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06bfaf55d4616a058",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "893893329401",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sn-np-aft-app-091563-dev-0-firewall-eu-west-3a",
              "subnet_type": "lz-reserved"
            },
            "tags_all": {
              "Name": "sn-np-aft-app-091563-dev-0-firewall-eu-west-3a",
              "appid": "aft-app-091563",
              "environment": "dev",
              "stla_lz": "true",
              "subnet_type": "lz-reserved"
            },
            "vpc_id": "vpc-037e9bf11844ed848"
          },
          "dependencies": [
            "data.aws_caller_identity.current",
            "module.baseline.data.aws_availability_zones.all",
            "module.baseline.data.aws_ssm_parameters_by_path.app_vars",
            "module.baseline.data.aws_ssm_parameters_by_path.deploy_core_vars",
            "module.baseline.data.aws_ssm_parameters_by_path.deploy_vars",
            "module.baseline.data.aws_ssm_parameters_by_path.legacy_app_vars",
            "module.baseline.module.standalone.aws_vpc_endpoint_service_allowed_principal.firewall",
            "module.baseline.module.standalone.data.aws_caller_identity.app",
            "module.baseline.module.standalone.data.aws_vpc_endpoint_service.firewall",
            "module.baseline.module.standalone.module.vpc.aws_vpc.standalone"
          ]
        },
        {
          "index_key": "eu-west-3c",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:893893329401:subnet/subnet-0e70c634a00a5741f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3c",
            "availability_zone_id": "euw3-az3",
            "cidr_block": "192.168.30.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e70c634a00a5741f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "893893329401",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sn-np-aft-app-091563-dev-0-firewall-eu-west-3c",
              "subnet_type": "lz-reserved"
            },
            "tags_all": {
              "Name": "sn-np-aft-app-091563-dev-0-firewall-eu-west-3c",
              "appid": "aft-app-091563",
              "environment": "dev",
              "stla_lz": "true",
              "subnet_type": "lz-reserved"
            },
            "vpc_id": "vpc-037e9bf11844ed848"
          },
          "dependencies": [
            "data.aws_caller_identity.current",
            "module.baseline.data.aws_availability_zones.all",
            "module.baseline.data.aws_ssm_parameters_by_path.app_vars",
            "module.baseline.data.aws_ssm_parameters_by_path.deploy_core_vars",
            "module.baseline.data.aws_ssm_parameters_by_path.deploy_vars",
            "module.baseline.data.aws_ssm_parameters_by_path.legacy_app_vars",
            "module.baseline.module.standalone.aws_vpc_endpoint_service_allowed_principal.firewall",
            "module.baseline.module.standalone.data.aws_caller_identity.app",
            "module.baseline.module.standalone.data.aws_vpc_endpoint_service.firewall",
            "module.baseline.module.standalone.module.vpc.aws_vpc.standalone"
          ]
        }
      ]
    },
    {
      "module": "module.baseline.module.standalone[0].module.vpc[0]",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].app",
      "instances": [
        {
          "index_key": "0_eu-west-3a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:893893329401:subnet/subnet-0512f385a390aef64",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3a",
            "availability_zone_id": "euw3-az1",
            "cidr_block": "192.168.10.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0512f385a390aef64",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "893893329401",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sn-np-aft-app-091563-dev-0-private-0-eu-west-3a",
              "subnet_index": "0",
              "subnet_type": "backend"
            },
            "tags_all": {
              "Name": "sn-np-aft-app-091563-dev-0-private-0-eu-west-3a",
              "appid": "aft-app-091563",
              "environment": "dev",
              "stla_lz": "true",
              "subnet_index": "0",
              "subnet_type": "backend"
            },
            "vpc_id": "vpc-037e9bf11844ed848"
          },
          "dependencies": [
            "data.aws_caller_identity.current",
            "module.baseline.data.aws_availability_zones.all",
            "module.baseline.data.aws_ssm_parameters_by_path.app_vars",
            "module.baseline.data.aws_ssm_parameters_by_path.deploy_core_vars",
            "module.baseline.data.aws_ssm_parameters_by_path.deploy_vars",
            "module.baseline.data.aws_ssm_parameters_by_path.legacy_app_vars",
            "module.baseline.module.standalone.aws_vpc_endpoint_service_allowed_principal.firewall",
            "module.baseline.module.standalone.data.aws_caller_identity.app",
            "module.baseline.module.standalone.data.aws_vpc_endpoint_service.firewall",
            "module.baseline.module.standalone.module.vpc.aws_vpc.standalone"
          ]
        },
        {
          "index_key": "0_eu-west-3c",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:893893329401:subnet/subnet-0299e926878b4dd9e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3c",
            "availability_zone_id": "euw3-az3",
            "cidr_block": "192.168.11.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0299e926878b4dd9e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "893893329401",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sn-np-aft-app-091563-dev-0-private-0-eu-west-3c",
              "subnet_index": "0",
              "subnet_type": "backend"
            },
            "tags_all": {
              "Name": "sn-np-aft-app-091563-dev-0-private-0-eu-west-3c",
              "appid": "aft-app-091563",
              "environment": "dev",
              "stla_lz": "true",
              "subnet_index": "0",
              "subnet_type": "backend"
            },
            "vpc_id": "vpc-037e9bf11844ed848"
          },
          "dependencies": [
            "data.aws_caller_identity.current",
            "module.baseline.data.aws_availability_zones.all",
            "module.baseline.data.aws_ssm_parameters_by_path.app_vars",
            "module.baseline.data.aws_ssm_parameters_by_path.deploy_core_vars",
            "module.baseline.data.aws_ssm_parameters_by_path.deploy_vars",
            "module.baseline.data.aws_ssm_parameters_by_path.legacy_app_vars",
            "module.baseline.module.standalone.aws_vpc_endpoint_service_allowed_principal.firewall",
            "module.baseline.module.standalone.data.aws_caller_identity.app",
            "module.baseline.module.standalone.data.aws_vpc_endpoint_service.firewall",
            "module.baseline.module.standalone.module.vpc.aws_vpc.standalone"
          ]
        },
        {
          "index_key": "1_eu-west-3a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:893893329401:subnet/subnet-0e355854d412c9173",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3a",
            "availability_zone_id": "euw3-az1",
            "cidr_block": "192.168.12.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e355854d412c9173",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "893893329401",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sn-np-aft-app-091563-dev-0-private-1-eu-west-3a",
              "subnet_index": "1",
              "subnet_type": "backend"
            },
            "tags_all": {
              "Name": "sn-np-aft-app-091563-dev-0-private-1-eu-west-3a",
              "appid": "aft-app-091563",
              "environment": "dev",
              "stla_lz": "true",
              "subnet_index": "1",
              "subnet_type": "backend"
            },
            "vpc_id": "vpc-037e9bf11844ed848"
          },
          "dependencies": [
            "data.aws_caller_identity.current",
            "module.baseline.data.aws_availability_zones.all",
            "module.baseline.data.aws_ssm_parameters_by_path.app_vars",
            "module.baseline.data.aws_ssm_parameters_by_path.deploy_core_vars",
            "module.baseline.data.aws_ssm_parameters_by_path.deploy_vars",
            "module.baseline.data.aws_ssm_parameters_by_path.legacy_app_vars",
            "module.baseline.module.standalone.aws_vpc_endpoint_service_allowed_principal.firewall",
            "module.baseline.module.standalone.data.aws_caller_identity.app",
            "module.baseline.module.standalone.data.aws_vpc_endpoint_service.firewall",
            "module.baseline.module.standalone.module.vpc.aws_vpc.standalone"
          ]
        },
        {
          "index_key": "1_eu-west-3c",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:893893329401:subnet/subnet-06789c64fa62697a3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3c",
            "availability_zone_id": "euw3-az3",
            "cidr_block": "192.168.13.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06789c64fa62697a3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "893893329401",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sn-np-aft-app-091563-dev-0-private-1-eu-west-3c",
              "subnet_index": "1",
              "subnet_type": "backend"
            },
            "tags_all": {
              "Name": "sn-np-aft-app-091563-dev-0-private-1-eu-west-3c",
              "appid": "aft-app-091563",
              "environment": "dev",
              "stla_lz": "true",
              "subnet_index": "1",
              "subnet_type": "backend"
            },
            "vpc_id": "vpc-037e9bf11844ed848"
          },
          "dependencies": [
            "data.aws_caller_identity.current",
            "module.baseline.data.aws_availability_zones.all",
            "module.baseline.data.aws_ssm_parameters_by_path.app_vars",
            "module.baseline.data.aws_ssm_parameters_by_path.deploy_core_vars",
            "module.baseline.data.aws_ssm_parameters_by_path.deploy_vars",
            "module.baseline.data.aws_ssm_parameters_by_path.legacy_app_vars",
            "module.baseline.module.standalone.aws_vpc_endpoint_service_allowed_principal.firewall",
            "module.baseline.module.standalone.data.aws_caller_identity.app",
            "module.baseline.module.standalone.data.aws_vpc_endpoint_service.firewall",
            "module.baseline.module.standalone.module.vpc.aws_vpc.standalone"
          ]
        }
      ]
    },
    {
      "module": "module.baseline.module.standalone[0].module.vpc[0]",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].app",
      "instances": [
        {
          "index_key": "eu-west-3a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:893893329401:subnet/subnet-0d8297ad90f36b73a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3a",
            "availability_zone_id": "euw3-az1",
            "cidr_block": "192.168.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d8297ad90f36b73a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "893893329401",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sn-np-aft-app-091563-dev-0-public-eu-west-3a",
              "subnet_type": "frontend"
            },
            "tags_all": {
              "Name": "sn-np-aft-app-091563-dev-0-public-eu-west-3a",
              "appid": "aft-app-091563",
              "environment": "dev",
              "stla_lz": "true",
              "subnet_type": "frontend"
            },
            "vpc_id": "vpc-037e9bf11844ed848"
          },
          "dependencies": [
            "data.aws_caller_identity.current",
            "module.baseline.data.aws_availability_zones.all",
            "module.baseline.data.aws_ssm_parameters_by_path.app_vars",
            "module.baseline.data.aws_ssm_parameters_by_path.deploy_core_vars",
            "module.baseline.data.aws_ssm_parameters_by_path.deploy_vars",
            "module.baseline.data.aws_ssm_parameters_by_path.legacy_app_vars",
            "module.baseline.module.standalone.aws_vpc_endpoint_service_allowed_principal.firewall",
            "module.baseline.module.standalone.data.aws_caller_identity.app",
            "module.baseline.module.standalone.data.aws_vpc_endpoint_service.firewall",
            "module.baseline.module.standalone.module.vpc.aws_vpc.standalone"
          ]
        },
        {
          "index_key": "eu-west-3c",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:893893329401:subnet/subnet-041a0507eac15b96d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3c",
            "availability_zone_id": "euw3-az3",
            "cidr_block": "192.168.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-041a0507eac15b96d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "893893329401",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sn-np-aft-app-091563-dev-0-public-eu-west-3c",
              "subnet_type": "frontend"
            },
            "tags_all": {
              "Name": "sn-np-aft-app-091563-dev-0-public-eu-west-3c",
              "appid": "aft-app-091563",
              "environment": "dev",
              "stla_lz": "true",
              "subnet_type": "frontend"
            },
            "vpc_id": "vpc-037e9bf11844ed848"
          },
          "dependencies": [
            "data.aws_caller_identity.current",
            "module.baseline.data.aws_availability_zones.all",
            "module.baseline.data.aws_ssm_parameters_by_path.app_vars",
            "module.baseline.data.aws_ssm_parameters_by_path.deploy_core_vars",
            "module.baseline.data.aws_ssm_parameters_by_path.deploy_vars",
            "module.baseline.data.aws_ssm_parameters_by_path.legacy_app_vars",
            "module.baseline.module.standalone.aws_vpc_endpoint_service_allowed_principal.firewall",
            "module.baseline.module.standalone.data.aws_caller_identity.app",
            "module.baseline.module.standalone.data.aws_vpc_endpoint_service.firewall",
            "module.baseline.module.standalone.module.vpc.aws_vpc.standalone"
          ]
        }
      ]
    },
    {
      "module": "module.baseline.module.standalone[0].module.vpc[0]",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "standalone",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].app",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:893893329401:vpc/vpc-037e9bf11844ed848",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/19",
            "default_network_acl_id": "acl-08868f5ab743bbb27",
            "default_route_table_id": "rtb-099b76f765321bab2",
            "default_security_group_id": "sg-0dde02eeb2e38ece6",
            "dhcp_options_id": "dopt-0131366d8622f829e",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-037e9bf11844ed848",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-099b76f765321bab2",
            "owner_id": "893893329401",
            "tags": {
              "Name": "vpc-np-aft-app-091563-dev-0"
            },
            "tags_all": {
              "Name": "vpc-np-aft-app-091563-dev-0",
              "appid": "aft-app-091563",
              "environment": "dev",
              "stla_lz": "true"
            }
          },
          "dependencies": [
            "data.aws_caller_identity.current",
            "module.baseline.data.aws_ssm_parameters_by_path.app_vars",
            "module.baseline.data.aws_ssm_parameters_by_path.legacy_app_vars",
            "module.baseline.module.standalone.aws_vpc_endpoint_service_allowed_principal.firewall",
            "module.baseline.module.standalone.data.aws_caller_identity.app",
            "module.baseline.module.standalone.data.aws_vpc_endpoint_service.firewall"
          ]
        }
      ]
    },
    {
      "module": "module.baseline.module.standalone[0].module.vpc[0]",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "aws",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].app",
      "instances": [
        {
          "index_key": "events",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:893893329401:vpc-endpoint/vpce-0d10f4d010cc35451",
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4"
              }
            ],
            "id": "vpce-0d10f4d010cc35451",
            "ip_address_type": "ipv4",
            "owner_id": "893893329401",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0dde02eeb2e38ece6"
            ],
            "service_name": "com.amazonaws.eu-west-3.events",
            "state": "available",
            "tags": {
              "Name": "ep-np-aft-app-091563-dev-0-events"
            },
            "tags_all": {
              "Name": "ep-np-aft-app-091563-dev-0-events",
              "appid": "aft-app-091563",
              "environment": "dev",
              "stla_lz": "true"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-037e9bf11844ed848"
          },
          "dependencies": [
            "data.aws_caller_identity.current",
            "module.baseline.data.aws_ssm_parameters_by_path.app_vars",
            "module.baseline.data.aws_ssm_parameters_by_path.legacy_app_vars",
            "module.baseline.module.standalone.aws_vpc_endpoint_service_allowed_principal.firewall",
            "module.baseline.module.standalone.data.aws_caller_identity.app",
            "module.baseline.module.standalone.data.aws_vpc_endpoint_service.firewall",
            "module.baseline.module.standalone.module.vpc.aws_vpc.standalone",
            "module.baseline.module.standalone.module.vpc.data.aws_region.current"
          ]
        },
        {
          "index_key": "logs",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:893893329401:vpc-endpoint/vpce-025393e452966fd51",
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4"
              }
            ],
            "id": "vpce-025393e452966fd51",
            "ip_address_type": "ipv4",
            "owner_id": "893893329401",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0dde02eeb2e38ece6"
            ],
            "service_name": "com.amazonaws.eu-west-3.logs",
            "state": "available",
            "tags": {
              "Name": "ep-np-aft-app-091563-dev-0-logs"
            },
            "tags_all": {
              "Name": "ep-np-aft-app-091563-dev-0-logs",
              "appid": "aft-app-091563",
              "environment": "dev",
              "stla_lz": "true"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-037e9bf11844ed848"
          },
          "dependencies": [
            "data.aws_caller_identity.current",
            "module.baseline.data.aws_ssm_parameters_by_path.app_vars",
            "module.baseline.data.aws_ssm_parameters_by_path.legacy_app_vars",
            "module.baseline.module.standalone.aws_vpc_endpoint_service_allowed_principal.firewall",
            "module.baseline.module.standalone.data.aws_caller_identity.app",
            "module.baseline.module.standalone.data.aws_vpc_endpoint_service.firewall",
            "module.baseline.module.standalone.module.vpc.aws_vpc.standalone",
            "module.baseline.module.standalone.module.vpc.data.aws_region.current"
          ]
        },
        {
          "index_key": "monitoring",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:893893329401:vpc-endpoint/vpce-08a554200a185da62",
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4"
              }
            ],
            "id": "vpce-08a554200a185da62",
            "ip_address_type": "ipv4",
            "owner_id": "893893329401",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0dde02eeb2e38ece6"
            ],
            "service_name": "com.amazonaws.eu-west-3.monitoring",
            "state": "available",
            "tags": {
              "Name": "ep-np-aft-app-091563-dev-0-monitoring"
            },
            "tags_all": {
              "Name": "ep-np-aft-app-091563-dev-0-monitoring",
              "appid": "aft-app-091563",
              "environment": "dev",
              "stla_lz": "true"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-037e9bf11844ed848"
          },
          "dependencies": [
            "data.aws_caller_identity.current",
            "module.baseline.data.aws_ssm_parameters_by_path.app_vars",
            "module.baseline.data.aws_ssm_parameters_by_path.legacy_app_vars",
            "module.baseline.module.standalone.aws_vpc_endpoint_service_allowed_principal.firewall",
            "module.baseline.module.standalone.data.aws_caller_identity.app",
            "module.baseline.module.standalone.data.aws_vpc_endpoint_service.firewall",
            "module.baseline.module.standalone.module.vpc.aws_vpc.standalone",
            "module.baseline.module.standalone.module.vpc.data.aws_region.current"
          ]
        }
      ]
    },
    {
      "module": "module.baseline.module.standalone[0].module.vpc[0]",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "fw_endpoint",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].app",
      "instances": [
        {
          "index_key": "eu-west-3a",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:893893329401:vpc-endpoint/vpce-0a1b5d662e7e97e14",
            "id": "vpce-0a1b5d662e7e97e14",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0738552bfff648460"
            ],
            "owner_id": "893893329401",
            "private_dns_enabled": false,
            "requester_managed": false,
            "service_name": "com.amazonaws.vpce.eu-west-3.vpce-svc-0fd0dc847921b4805",
            "state": "available",
            "subnet_ids": [
              "subnet-06bfaf55d4616a058"
            ],
            "tags": {
              "Name": "ep-np-aft-app-091563-dev-0-fw-eu-west-3a"
            },
            "tags_all": {
              "Name": "ep-np-aft-app-091563-dev-0-fw-eu-west-3a",
              "appid": "aft-app-091563",
              "environment": "dev",
              "stla_lz": "true"
            },
            "vpc_endpoint_type": "GatewayLoadBalancer",
            "vpc_id": "vpc-037e9bf11844ed848"
          },
          "dependencies": [
            "data.aws_caller_identity.current",
            "module.baseline.data.aws_availability_zones.all",
            "module.baseline.data.aws_ssm_parameters_by_path.app_vars",
            "module.baseline.data.aws_ssm_parameters_by_path.deploy_core_vars",
            "module.baseline.data.aws_ssm_parameters_by_path.deploy_vars",
            "module.baseline.data.aws_ssm_parameters_by_path.legacy_app_vars",
            "module.baseline.module.standalone.aws_vpc_endpoint_service_allowed_principal.firewall",
            "module.baseline.module.standalone.data.aws_caller_identity.app",
            "module.baseline.module.standalone.data.aws_vpc_endpoint_service.firewall",
            "module.baseline.module.standalone.module.vpc.aws_subnet.firewall",
            "module.baseline.module.standalone.module.vpc.aws_vpc.standalone"
          ]
        },
        {
          "index_key": "eu-west-3c",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:893893329401:vpc-endpoint/vpce-02ad8eecd13470ffc",
            "id": "vpce-02ad8eecd13470ffc",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0204fec566d73bf08"
            ],
            "owner_id": "893893329401",
            "private_dns_enabled": false,
            "requester_managed": false,
            "service_name": "com.amazonaws.vpce.eu-west-3.vpce-svc-0fd0dc847921b4805",
            "state": "available",
            "subnet_ids": [
              "subnet-0e70c634a00a5741f"
            ],
            "tags": {
              "Name": "ep-np-aft-app-091563-dev-0-fw-eu-west-3c"
            },
            "tags_all": {
              "Name": "ep-np-aft-app-091563-dev-0-fw-eu-west-3c",
              "appid": "aft-app-091563",
              "environment": "dev",
              "stla_lz": "true"
            },
            "vpc_endpoint_type": "GatewayLoadBalancer",
            "vpc_id": "vpc-037e9bf11844ed848"
          },
          "dependencies": [
            "data.aws_caller_identity.current",
            "module.baseline.data.aws_availability_zones.all",
            "module.baseline.data.aws_ssm_parameters_by_path.app_vars",
            "module.baseline.data.aws_ssm_parameters_by_path.deploy_core_vars",
            "module.baseline.data.aws_ssm_parameters_by_path.deploy_vars",
            "module.baseline.data.aws_ssm_parameters_by_path.legacy_app_vars",
            "module.baseline.module.standalone.aws_vpc_endpoint_service_allowed_principal.firewall",
            "module.baseline.module.standalone.data.aws_caller_identity.app",
            "module.baseline.module.standalone.data.aws_vpc_endpoint_service.firewall",
            "module.baseline.module.standalone.module.vpc.aws_subnet.firewall",
            "module.baseline.module.standalone.module.vpc.aws_vpc.standalone"
          ]
        }
      ]
    }
  ]
}